--- a/themes/bootstrap/templates/admin/settings/sales-tax/index.twig
+++ b/themes/bootstrap/templates/admin/settings/sales-tax/index.twig
@@ -4,13 +4,15 @@
 {# @var validStatesMap array #}
 {% extends '@theme/layout/base-admin.twig' %}
 
-{% block pageTitle %}Settings{% endblock %}
+{% block pageTitle %}Sales Tax Rules{% endblock %}
 
 {% block content %}
     <div class="container">
+        {% include '@theme/admin/settings/sales-tax/parts/header.twig' %}
+
         <div class="row">
             <div class="col-sm-12">
-                <h1>Sales Tax Settings</h1>
+                <h1>Sales Tax Rules</h1>
                 <p>
                     Tax rules have the following precedence order.<br>
                     <span class="badge">1</span> Zipcode<br>
@@ -18,135 +20,71 @@
                     <span class="badge">3</span> State
                 </p>
 
-                <div class="well well-sm">
-                    <h2>Zipcode Rates</h2>
-                    <div id="zipcode-rates" class="fluid-control-group">
+                <hr>
+                <h3>Zipcode Rates</h3>
+                <table class="table table-condensed table-striped">
+                    <thead>
+                        <tr>
+                            <th>Zipcode</th>
+                            <th>Rate</th>
+                            <th>Apply to Shipping</th>
+                        </tr>
+                    </thead>
+                    <tbody>
                         {% for taxRate in zip5TaxRates %}
-                            <div class="row">
-                                <form action="{{ routeUrl('admin.settings.sales-tax.edit') }}"
-                                      method="post"
-                                      class="form">
-                                    {{ form.csrf() }}
-                                    {{ form.hidden('taxRateId', taxRate.id.hex) }}
-
-                                    {% include '@theme/admin/settings/sales-tax/parts/zip5-tax-rate-input-fields.twig' %}
-
-                                    <div class="form-group col-sm-2">
-                                        <br>
-                                        <button type="submit" name="action" value="delete" class="btn btn-danger btn-xs pull-right" title="Delete Tax Rate"><i class="fa fa-remove"></i></button>
-                                        <button type="submit" name="action" value="edit" class="btn btn-default btn-xs pull-right" title="Edit Tax Rate">Update</button>
-                                    </div>
-                                </form>
-                            </div>
+                            <tr>
+                                <td>{{ taxRate.zip5 }}</td>
+                                <td>{{ taxRate.rate|floatPercent }}%</td>
+                                <td>{{ taxRate.applyToShipping|boolYesNo }}</td>
+                            </tr>
                         {% endfor %}
+                    </tbody>
+                </table>
 
-                        <hr>
-                        <h3>Add Tax Rate:</h3>
-                        <div class="row">
-                            <form action="{{ routeUrl('admin.settings.sales-tax.new') }}"
-                                  method="post"
-                                  class="form">
-                                {{ form.csrf() }}
-
-                                {% include '@theme/admin/settings/sales-tax/parts/zip5-tax-rate-input-fields.twig' %}
-
-                                <div class="form-group col-sm-2">
-                                    <br>
-                                    <button type="submit" class="btn btn-primary btn-sm pull-right" title="Add Tax Rate">
-                                        <i class="fa fa-check-circle"></i>
-                                        Create
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="well well-sm">
-                    <h2>Zipcode Range Rates</h2>
-                    <div id="zipcode-rates" class="fluid-control-group">
+                <hr>
+                <h3>Zipcode Range Rates</h3>
+                <table class="table table-condensed table-striped">
+                    <thead>
+                        <tr>
+                            <th>Zipcodes</th>
+                            <th>Rate</th>
+                            <th>Apply to Shipping</th>
+                        </tr>
+                    </thead>
+                    <tbody>
                         {% for taxRate in zip5RangeTaxRates %}
-                            <div class="row">
-                                <form action="{{ routeUrl('admin.settings.sales-tax.edit') }}"
-                                      method="post"
-                                      class="form">
-                                    {{ form.csrf() }}
-                                    {{ form.hidden('taxRateId', taxRate.id.hex) }}
-
-                                    {% include '@theme/admin/settings/sales-tax/parts/zip5-range-tax-rate-input-fields.twig' %}
-
-                                    <div class="form-group col-sm-2">
-                                        <br>
-                                        <button type="submit" name="action" value="delete" class="btn btn-danger btn-xs pull-right" title="Delete Tax Rate"><i class="fa fa-remove"></i></button>
-                                        <button type="submit" name="action" value="edit" class="btn btn-default btn-xs pull-right" title="Edit Tax Rate">Update</button>
-                                    </div>
-                                </form>
-                            </div>
+                            <tr>
+                                <td>{{ taxRate.zip5From }} - {{ taxRate.zip5To }}</td>
+                                <td>{{ taxRate.rate|floatPercent }}%</td>
+                                <td>{{ taxRate.applyToShipping|boolYesNo }}</td>
+                            </tr>
                         {% endfor %}
+                    </tbody>
+                </table>
 
-                        <hr>
-                        <h3>Add Tax Rate:</h3>
-                        <div class="row">
-                            <form action="{{ routeUrl('admin.settings.sales-tax.new') }}"
-                                  method="post"
-                                  class="form">
-                                {{ form.csrf() }}
-
-                                {% include '@theme/admin/settings/sales-tax/parts/zip5-range-tax-rate-input-fields.twig' %}
-
-                                <div class="form-group col-sm-2">
-                                    <br>
-                                    <button type="submit" class="btn btn-primary btn-sm pull-right" title="Add Tax Rate">
-                                        <i class="fa fa-check-circle"></i>
-                                        Create
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="well well-sm">
-                    <hr />
-                    <h2>State Rates</h2>
-                    <div id="zipcode-rates" class="fluid-control-group">
+                <hr>
+                <h3>State Rates</h3>
+                <table class="table table-condensed table-striped">
+                    <thead>
+                        <tr>
+                            <th>State</th>
+                            <th>Rate</th>
+                            <th>Apply to Shipping</th>
+                        </tr>
+                    </thead>
+                    <tbody>
                         {% for taxRate in stateTaxRates %}
-                            <div class="row">
-                                <form action="{{ routeUrl('admin.settings.sales-tax.edit') }}"
-                                      method="post"
-                                      class="form">
-                                    {{ form.csrf() }}
-                                    {{ form.hidden('taxRateId', taxRate.id.hex) }}
-
-                                    {% include '@theme/admin/settings/sales-tax/parts/state-tax-rate-input-fields.twig' %}
-
-                                    <div class="form-group col-sm-2">
-                                        <br>
-                                        <button type="submit" name="action" value="delete" class="btn btn-danger btn-xs pull-right" title="Delete Tax Rate"><i class="fa fa-remove"></i></button>
-                                        <button type="submit" name="action" value="edit" class="btn btn-default btn-xs pull-right" title="Edit Tax Rate">Update</button>
-                                    </div>
-                                </form>
-                            </div>
+                            <tr>
+                                <td>
+                                    {{ validStatesMap[taxRate.state] }}
+                                    <span class="text-muted small">({{ taxRate.state }})</span>
+                                </td>
+                                <td>{{ taxRate.rate|floatPercent }}%</td>
+                                <td>{{ taxRate.applyToShipping|boolYesNo }}</td>
+                            </tr>
                         {% endfor %}
-                        <hr>
-                        <h3>Add Tax Rate:</h3>
-                        <div class="row">
-                            <form action="{{ routeUrl('admin.settings.sales-tax.new') }}"
-                                  method="post"
-                                  class="form">
-                                {{ form.csrf() }}
-
-                                {% include '@theme/admin/settings/sales-tax/parts/state-tax-rate-input-fields.twig' %}
-
-                                <div class="form-group col-sm-2">
-                                    <br>
-                                    <button type="submit" class="btn btn-primary btn-sm pull-right" title="Add Tax Rate">
-                                        <i class="fa fa-check-circle"></i>
-                                        Create
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
